--- a/src/_includes/snippets/footer.njk
+++ b/src/_includes/snippets/footer.njk
@@ -1,7 +1,7 @@
 <div class="row border-top py-5">
   <div class="col-12">
-    <p class=""><img src="{{ '/img/hkimg.png' | url }}" alt="Holger Koenemann, UX designer and Frontend Engineer" width="60" height="60" class="float-left mt-1 me-3 gradient-rounded">A tiny sideproject by
-      <a href="https://github.com/holger1411" class="link-fancy">Holger Koenemann</a>. Made in lovely Hannover, Germany</p>
+    <p class=""><img src="{{ '/img/books.jpg' | url }}" alt="The SF Nexus is a hub for sci-fi data" width="60" height="60" class="float-left mt-1 me-3 gradient-rounded">A tiny sideproject by
+      <a href="https://github.com/hawc2" class="link-fancy">Alex Wermer-Colan</a>.</p>
   </div>
 </div>
 
