--- a/src/index.njk
+++ b/src/index.njk
@@ -11,7 +11,7 @@ layout: layouts/blank.njk
       </h1>
       <p class="lead mb-4">This website serves as a hub for science fiction as data.</p>
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning text-dark">v0.10.0<span class="visually-hidden">latest version</span></span></a>
-      <a class="link-fancy py-2" href="https://github.com/hawc2/sfnexus">Check it out on Github
+      <a class="link-fancy py-2" href="https://github.com/SF-Nexus">Check it out on Github
       </a>
     </div>
   </div>
