--- a/src/blog.njk
+++ b/src/blog.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/blog.njk
-title: My personal blog
+title: Chronicling the sf project
 pagination:
     data: collections.post
     size: 3
@@ -8,4 +8,4 @@ pagination:
     alias: posts
 ---
 
-<p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+<p class="lead">This part of the website is a space for those working on the project to document it in rough form.</p>
