--- a/src/_includes/snippets/navbar.njk
+++ b/src/_includes/snippets/navbar.njk
@@ -18,6 +18,11 @@
         <a class="nav-link" href="{{ '/code' | url }}">Code</a>
         </li>
 
+        <li class="nav-item me-1">
+          <a class="nav-link" href="{{ '/ocr' | url }}">Data</a>
+        </li>
+       
+        
       </ul>
     </div>
   </div>
