--- a/src/_includes/snippets/navbar.njk
+++ b/src/_includes/snippets/navbar.njk
@@ -19,7 +19,7 @@
         </li>
 
         <li class="nav-item me-1">
-          <a class="nav-link" href="{{ '/ocr' | url }}">Data</a>
+          <a class="nav-link" href="{{ '/ocr' | url }}">OCR</a>
         </li>
        
         
