--- a/src/_includes/snippets/navbar.njk
+++ b/src/_includes/snippets/navbar.njk
@@ -21,7 +21,10 @@
         <li class="nav-item me-1">
           <a class="nav-link" href="{{ '/ocr' | url }}">OCR</a>
         </li>
-       
+            
+        <li class="nav-item me-1">
+          <a class="nav-link" href="{{ '/ocr' | url }}">Curation</a>
+        </li>
         
       </ul>
     </div>
