--- a/src/_includes/snippets/navbar.njk
+++ b/src/_includes/snippets/navbar.njk
@@ -23,7 +23,7 @@
         </li>
             
         <li class="nav-item me-1">
-          <a class="nav-link" href="{{ '/ocr' | url }}">Curation</a>
+          <a class="nav-link" href="{{ '/curation' | url }}">Curation</a>
         </li>
         
       </ul>
