--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,7 @@ layout: layouts/blank.njk
         Welcome to the
         <strong>SF Nexus!</strong>
       </h1>
-      <p class="lead mb-4">This website serves as a hub for science fiction as data.</p>
+      <p class="lead mb-4">This website makes available science fiction collections as data.</p>
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning text-dark">v0.10.0<span class="visually-hidden">latest version</span></span></a>
       <a class="link-fancy py-2" href="https://github.com/SF-Nexus">Check it out on Github
       </a>
