--- a/src/index.njk
+++ b/src/index.njk
@@ -12,6 +12,7 @@ layout: layouts/blank.njk
       <p class="lead mb-4">This website makes available science fiction collections as data.</p>
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning text-dark">v0.10.0<span class="visually-hidden">latest version</span></span></a>
       <a class="link-fancy py-2" href="https://github.com/SF-Nexus">Check it out on Github
+      <a class="link-fancy py-2" href="https://lcdssgeo.com/omeka-s/s/scifi/page/digitizing-science-fiction">And visit our Omeka site to see an exhibit of SF book covers
       </a>
     </div>
   </div>
