--- a/src/index.njk
+++ b/src/index.njk
@@ -11,8 +11,9 @@ layout: layouts/blank.njk
       </h1>
       <p class="lead mb-4">This website makes available science fiction collections as data.</p>
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning text-dark">v0.10.0<span class="visually-hidden">latest version</span></span></a>
-      <a class="link-fancy py-2" href="https://github.com/SF-Nexus">Check it out on Github
-      <a class="link-fancy py-2" href="https://lcdssgeo.com/omeka-s/s/scifi/page/digitizing-science-fiction">And visit our Omeka site to see an exhibit of SF book covers
+      <a class="link-fancy py-2" href="https://github.com/SF-Nexus">Check it out on Github 
+       <p class="lead mb-4">For our companion site containing an exhibit of SF book covers.</p>
+       <a class="link-fancy py-2" href="https://lcdssgeo.com/omeka-s/s/scifi/page/digitizing-science-fiction">Visit our Omeka site
       </a>
     </div>
   </div>
